--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://rodrigobezerra.github.io/verdiplan-mvp",
+  "homepage": "https://rodncb.github.io/verdiplan-mvp",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
